# MindfulFocus

./: .gitignore  MindfulFocus.sln  MindfulFocus.spec  README.md  launcher.py  requirements.txt  run_medical_analysis.py  setup.sh  setup_medical_analysis.sh  setup_mindful.sh  start_evaluation.bat
MindfulFocus/: gitignore  modified_files.txt  package-lock.json  package.json
MindfulFocus/app/: index.html
MindfulFocus/frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
adk_medical_evaluation/: README.md  __init__.py  launch_hud.py  main_evaluator.py
adk_medical_evaluation/agents/: __init__.py  medical_evaluator_agent.py
archive/: test_ollama_integration.py
archive/mindful-core/: pyproject.toml
archive/mindful-core/config/: calibration.json
archive/mindful-core/docs/: PRIVACY.md
archive/mindful-core/mindful_core/: calibration.py  rules.py
archive/mindful-core/mindful_core.egg-info/: top_level.txt
archive/mindful-core/scripts/: simulate_stream.py
evaluation_data/: aggregated_results_20250824_204658.json  aggregated_results_20250824_204924.json  aggregated_results_20250824_205106.json  aggregated_results_20250824_213330.json  final_report_20250824_204944.json  final_report_20250824_205155.json  final_report_20250824_213355.json
local_database/: medical_evaluation.db  medical_evaluation.db-shm  medical_evaluation.db-wal
medical_analysis/: config.json  landmark_analyzer.py  llava_analyzer.py  medical_main.py  ollama_analyzer.py
mindful-core/: medical_processor.py
mindful-desktop/: LICENSE
public/: index.html
(+45 files in other folders)
