[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindful-core"
version = "0.1.0"
description = "Mindful Focus: core calibration and rule engine."
authors = [{name = "NeuroGO"}]
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = []

[tool.setuptools]
packages = ["mindful_core"]
